fixed spacing

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
     font-size: 20px;
     color: white;
     margin: auto;
-    padding: 20px 10px;
+    padding: 20px 10px 10px 10px;
     max-width: 800px;
 }
 
